kubernetes/basics/api-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-demo
  template:
    metadata:
      labels:
        app: api-demo
    spec:
      containers:
        - name: http-echo
          image: hashicorp/http-echo
          args:
            - "-text=$(APP_MESSAGE)"
          ports:
            - containerPort: 5678
